# movie-recomended-app

./: README.md  main.py  movies.db  pyproject.toml  series.db
rsc/: movies.db  series.db
