[project]
name = "ReelChoice"
version = "1.0.0"
description = "مساعدك في اختيار الافللاام والمسلسلات"
requires-python = ">=3.9"
dependencies = [
    "flet==0.28.3"
]

[tool.flet]
org = "com.salah.ReelChoice"
product = "ReelChoice"
company = "Salah Abdeldaim"
copyright = "Copyright (C) 2025 Salah Abdeldaim"
icon = "assets/icon.png" 
